k8s/cluster-ip.yaml
apiVersion: v1
kind: Service

metadata:
  name: twjobs-clusterip
  labels:
    app: twjobs

spec:
  type: ClusterIP
  selector:
    app: twjobs
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
