k8s/load-balancer.yaml
apiVersion: v1
kind: Service

metadata:
  name: twjobs-loadbalancer
  labels:
    app: twjobs

spec:
  type: LoadBalancer
  selector:
    app: twjobs
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
